--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,35 +1,9 @@
-.app {
-  text-align: center;
+.App {
+  background-color: rgba(0, 0, 0, 0.08);
 }
-
-.appHeader {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  margin-top: 36px;
-  margin-bottom: 24px;
-}
-
-.appLogo {
-  height: 10vmin;
-  pointer-events: none;
-}
-
-h1 {
-  font-family: 'Slidefu';
-  font-size: 72px;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .appLogo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.robotList {
-	width: 85vw;
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr;
-	grid-gap: 20px;
+.page-content {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  min-height: 75vh;
 }
